--- a/index.html
+++ b/index.html
@@ -427,13 +427,13 @@
                                         </figure>
                                     </div>
                                 </div>
-                                <div class="swiper-slide">
+                                <!-- <div class="swiper-slide">
                                     <div class="client-logo-item wow fadeInUp">
                                         <figure class="image-anime">
                                             <img src="images/5.png" alt="Client Logo">
                                         </figure>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="swiper-slide">
                                     <div class="client-logo-item wow fadeInUp">
